Monitoring/example-4/certs-manager/selfsigned-issuer/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  annotations:
    cert-manager.io/cluster-issuer: svestor-link-ca
    cert-manager.io/duration: 2160h     # will be valid for 90d in total 
    cert-manager.io/renewBefore: 360h   # will be renewed 15d before expiration (every 75d)
spec:
  ingressClassName: external-nginx
  rules:
    - host: grafana.svestor.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
  tls:
    - hosts:
        - grafana.svestor.link
      secretName: grafana-svestor-link-tls
